Added drag to marker, flyto function and cleaned up code2

--- a/weather_map.html
+++ b/weather_map.html
@@ -28,8 +28,7 @@
 		}
 		/*large*/
 		@media (min-width: 992px) and (max-width: 1199px){
-			#map{width: 50%;
-				height: 500px; margin: 20px 0 0 50px}
+			#map{width: 50%;height: 500px; margin: 20px 0 0 50px}
 			.week{margin: 30px 0 0 15px}
 			.days{width: 400px; height: 95px; margin: 4px 0}
 		}
